--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8, 3.9, "3.10", "3.11"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
     - uses: actions/checkout@v4
@@ -21,20 +21,52 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     
-    - name: Install dependencies
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y build-essential
+    
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest pytest-cov
     
-    - name: Test with pytest
+    - name: Run tests with unittest
       run: |
-        pytest tests/ -v --cov=beetsplug
+        python -m unittest discover tests/ -v
+    
+    - name: Test plugin import
+      run: |
+        python -c "from beetsplug.ebooks import EBooksPlugin; print('Plugin import successful')"
+    
+    - name: Test ebook_manager script
+      run: |
+        python ebook_manager.py --help
+
+  package:
+    runs-on: ubuntu-latest
+    needs: test
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.11"
+    
+    - name: Install build dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install build twine
     
     - name: Build package
       run: |
-        pip install build
         python -m build
+    
+    - name: Check package
+      run: |
+        twine check dist/*
 
   lint:
     runs-on: ubuntu-latest
@@ -47,16 +79,15 @@ jobs:
       with:
         python-version: "3.11"
     
-    - name: Install dependencies
+    - name: Install linting dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 black
+        pip install flake8
     
-    - name: Lint with flake8
+    - name: Lint with flake8 (errors and warnings)
       run: |
-        flake8 beetsplug/ --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 beetsplug/ --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    
-    - name: Check formatting with black
-      run: |
-        black --check beetsplug/
+        # Stop the build if there are Python syntax errors or undefined names
+        flake8 beetsplug/ ebook_manager.py --count --select=E9,F63,F7,F82 --show-source --statistics
+        # Treat all other issues as warnings
+        flake8 beetsplug/ ebook_manager.py --count --exit-zero --max-complexity=15 --max-line-length=120 --statistics
+      continue-on-error: false
