--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,3 +39,15 @@ ebooks = "beetsplug.ebooks:EBooksPlugin"
 
 [tool.setuptools.packages.find]
 include = ["beetsplug*"]
+
+[tool.black]
+line-length = 100
+target-version = ["py38"]
+
+[tool.isort]
+profile = "black"
+line_length = 100
+
+[tool.flake8]
+max-line-length = 100
+extend-ignore = ["E203", "W503"]
