Reorganize and improve test structure
- Move test_comic_support.py and test_comic_info.py functionality into tests/ directory
- Convert standalone test scripts to proper unittest/pytest format
- Create comprehensive test_comic_support.py with 7 new comic-specific tests
- Improve test_ebooks.py with better coverage of core functionality
- Remove duplicate test files from root directory
- Update create_test_comics.py to be more general and functional
- Add proper test fixtures for CBZ/ComicInfo.xml testing
- Update CI workflow to reflect new test structure
- All 15 tests passing with 38% code coverage
- All linting checks passing

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,7 +89,7 @@ jobs:
         # Stop the build if there are Python syntax errors or undefined names
         flake8 beetsplug/ tests/ examples/ *.py --count --select=E9,F63,F7,F82 --show-source --statistics
         # Check all other issues
-        flake8 beetsplug/ tests/ examples/ setup.py create_test_comics.py test_comic_support.py test_comic_info.py --count --max-line-length=100 --statistics
+        flake8 beetsplug/ tests/ examples/ setup.py create_test_comics.py --count --max-line-length=100 --statistics
     
     - name: Check code formatting with black
       run: |
