Update .gitignore to exclude test ebooks and comics
- Add test_ebooks/ directory to ignore list
- Include comic book formats: .cbr, .cbz, .cb7, .cbt
- Remove previously tracked test comic files from repository
- Test files will now be generated locally but not committed
- Keeps repository clean while allowing local testing

--- a/.gitignore
+++ b/.gitignore
@@ -167,12 +167,19 @@ cython_debug/
 
 # Test files and data
 test_data/
+test_ebooks/
+
+# Ebook and comic files (generated during testing)
 *.epub
 *.pdf
 *.mobi
 *.azw
 *.azw3
 *.lrf
+*.cbr
+*.cbz
+*.cb7
+*.cbt
 
 # Beets config for testing
 config.yaml
